--- a/Slides/01-Introduction.html
+++ b/Slides/01-Introduction.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Linguagem de programação R</title>
+    <title>01-Introduction.utf8</title>
     <meta charset="utf-8" />
     <meta name="author" content="Deivison Venicio Souza" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
@@ -30,8 +30,9 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Linguagem de programação R
-## (uma introdução para iniciantes)
+# <div class="line-block">Linguagem de programação R:<br />
+uma introdução para iniciantes</div>
+## Instalação, operadores e funções matemáticas
 ### Deivison Venicio Souza
 ### Universidade Federal do Pará (UFPA)
 ### <p>21/setembro/2020 | Altamira, Pará</p>
@@ -582,9 +583,8 @@ Acesse o R-script:]
 
 [01-R-Operators](https://deivisonsouza.github.io/R-Introduction/R-scripts/01-R-Operators.R)]
 
-&lt;div style="font-size:7pt"&gt;
+
 .left[.footnote[.black[Imagem de] &lt;a href="https://pixabay.com/pt/users/Erik_Karits-15012370/?utm_source=link-attribution&amp;amp;utm_medium=referral&amp;amp;utm_campaign=image&amp;amp;utm_content=4808774"&gt;Erik Karits&lt;/a&gt; .black[por] &lt;a href="https://pixabay.com/pt/?utm_source=link-attribution&amp;amp;utm_medium=referral&amp;amp;utm_campaign=image&amp;amp;utm_content=4808774"&gt;Pixabay&lt;/a&gt;️]]
-&lt;/div&gt;
 
 ---
 name: arit
@@ -828,8 +828,8 @@ Em programação, estes operadores são usados para realizar `operações lógic
 ]
 
 .right-column[
-<div id="htmlwidget-4a243c101d4e1f975e6e" style="width:350px;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-4a243c101d4e1f975e6e">{"x":{"filter":"none","caption":"<caption>Dados fictícios para 10 árvores de duas espécies florestais.<\/caption>","editable":{"target":"cell","disable":{"columns":null}},"data":[["Swietenia macrophylla","Swietenia macrophylla","Swietenia macrophylla","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Swietenia macrophylla","Swietenia macrophylla"],[33.6,42.6,52.1,80.3,90.8,49.4,70.5,100.5,60.7,27.1],[9.1,13.2,15.4,18.6,19.5,16.8,17.9,22.4,15.3,8.7],["Sim","Não","Sim","Não","Sim","Não","Sim","Não","Sim","Sim"],[2,1,3,1,2,1,2,3,1,3],["Protegida","Protegida","Protegida","Explorar","Explorar","Remanescente","Explorar","Remanescente","Protegida","Protegida"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Especie<\/th>\n      <th>DAP<\/th>\n      <th>H<\/th>\n      <th>Cipo<\/th>\n      <th>QF<\/th>\n      <th>Selecao<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":10,"dom":"tip","autoWidth":true,"initComplete":"function(settings, json) {\n$(this.api().table().container()).css({'font-size': '12pt'});\n}","columnDefs":[{"className":"dt-right","targets":[1,2,4]}],"order":[],"orderClasses":false}},"evals":["options.initComplete"],"jsHooks":[]}</script>
+<div id="htmlwidget-007c678df3788edafff0" style="width:350px;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-007c678df3788edafff0">{"x":{"filter":"none","caption":"<caption>Dados fictícios para 10 árvores de duas espécies florestais.<\/caption>","editable":{"target":"cell","disable":{"columns":null}},"data":[["Swietenia macrophylla","Swietenia macrophylla","Swietenia macrophylla","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Swietenia macrophylla","Swietenia macrophylla"],[33.6,42.6,52.1,80.3,90.8,49.4,70.5,100.5,60.7,27.1],[9.1,13.2,15.4,18.6,19.5,16.8,17.9,22.4,15.3,8.7],["Sim","Não","Sim","Não","Sim","Não","Sim","Não","Sim","Sim"],[2,1,3,1,2,1,2,3,1,3],["Protegida","Protegida","Protegida","Explorar","Explorar","Remanescente","Explorar","Remanescente","Protegida","Protegida"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Especie<\/th>\n      <th>DAP<\/th>\n      <th>H<\/th>\n      <th>Cipo<\/th>\n      <th>QF<\/th>\n      <th>Selecao<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":10,"dom":"tip","autoWidth":true,"initComplete":"function(settings, json) {\n$(this.api().table().container()).css({'font-size': '12pt'});\n}","columnDefs":[{"className":"dt-right","targets":[1,2,4]}],"order":[],"orderClasses":false}},"evals":["options.initComplete"],"jsHooks":[]}</script>
 
 ]
 
@@ -1094,6 +1094,19 @@ x &gt;= 3 &amp;&amp; y &lt;= 50
 ```
 ]
 
+---
+class: center, inverse, middle
+background-image: url(fig/imgD.jpg)
+background-size: cover
+
+# .right[.black[FUNÇÕES MATEMÁTICAS]]
+
+.right[.black[
+Acesse o R-script:]
+
+[01-R-Operators](https://deivisonsouza.github.io/R-Introduction/R-scripts/01-R-Operators.R)]
+
+.left[.footnote[Imagem de &lt;a href="https://pixabay.com/pt/users/lucasgeorgewendt-15638399/?utm_source=link-attribution&amp;amp;utm_medium=referral&amp;amp;utm_campaign=image&amp;amp;utm_content=5300030"&gt;Lucas Wendt&lt;/a&gt; por &lt;a href="https://pixabay.com/pt/?utm_source=link-attribution&amp;amp;utm_medium=referral&amp;amp;utm_campaign=image&amp;amp;utm_content=5300030"&gt;Pixabay&lt;/a&gt;️]]
 
 ---
 name: FunsMat
@@ -1358,7 +1371,7 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
 .remark-slide-content {
   background-color: #FAFAFA;
   /* border-top: 80px solid #23373B;*/
-  border-image: url(fig/black.jpg) 50 round;
+  border-image: url(fig/imgA.jpg) 50 round;
   font-size: 20px;
   font-weight: 300;
   line-height: 1.5;
@@ -1370,7 +1383,7 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
 }
 
 .inverse {
-  background-image: url(fig/black.jpg);
+  background-image: url(fig/imgA.jpg);
   border-image: 0px none;
   background-size: cover;
   border-top: 0px solid #FAFAFA;
@@ -1437,7 +1450,7 @@ h2, h3, h4 {
 }
 
 .title-slide {
-  background-image: url(fig/black.jpg);
+  background-image: url(fig/imgA.jpg);
   border-image: 0px none;
   background-size: cover;
   border-top: 0px solid #FAFAFA;
@@ -1446,7 +1459,7 @@ h2, h3, h4 {
 
 .title-slide h1  {
   color: #ffffff;
-  font-size: 80px;
+  font-size: 60px;
   text-shadow: none;
   font-weight: 400;
   text-align: left;
@@ -1459,7 +1472,7 @@ h2, h3, h4 {
   color: #ffffff;
   text-shadow: none;
   font-weight: 300;
-  font-size: 50px;
+  font-size: 40px;
   text-align: left;
   margin-left: 15px;
 }
@@ -1521,7 +1534,7 @@ hr, .mline h1::after {
     position: absolute;
     bottom: .5em;
     padding-left: 10px;
-    font-size: 150%;
+    font-size: 50%;
     text-align: left;
 }
 
